--- a/src/styles.css
+++ b/src/styles.css
@@ -2,9 +2,7 @@
   font-family: sans-serif;
   text-align: center;
 }
-body {
-  background-color: lightyellow;
-}
+
 input {
   margin: 1rem;
   padding: 1rem;
@@ -12,4 +10,11 @@ input {
   text-align: center;
   border: solid;
   border-radius: 1rem;
+}
+.App {
+  border: solid;
+  background-color: lightyellow;
+  margin-top: 10rem;
+  margin-right: 5rem;
+  margin-left: 5rem;
 }
